# homeassistant-openmediavault

./: .gitignore  CHANGELOG.md  README.md  hacs.json  info.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/instructions/: autopilot-completion.instructions.md  coordinator.instructions.md  copilot-instructions.md
.github/prompts/: recheck-ha-release-stack.prompt.md
.github/scripts/: deploy-to-homeassistant.sh
.github/skills/home-assistant-best-practices/: SKILL.md
.github/workflows/: ci.yml  lock.yml  release.yml  stale.yml
custom_components/omv/: __init__.py  binary_sensor.py  binary_sensor_types.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  omv_api.py  sensor.py  sensor_types.py  strings.json
custom_components/omv/translations/: de.json  en.json  nl.json  pt_BR.json  sv_SE.json
scripts/: check_omv_rpc_compatibility.py
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_live_compatibility_probe.py  test_manifest.py  test_omv_api.py  test_sensor.py
