[project]
name = "homeassistant-omv"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "pytest-homeassistant-custom-component>=0.13",
  "aioresponses>=0.7",
]
dev = [
  "ruff>=0.3",
  "mypy>=1.8",
  "pre-commit>=3.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true