[project]
name = "homeassistant-omv"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-homeassistant-custom-component==0.13.317",
  "aioresponses==0.7.8",
]
dev = [
  "ruff==0.15.6",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true