[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-omv"
version = "0.1.0"
requires-python = ">=3.13.2"

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.0.0",
  "pytest-homeassistant-custom-component==0.13.246",
  "pycares==4.11.0",
  "aioresponses==0.7.8",
]
dev = [
  "ruff==0.15.9",
  "mypy==1.20.0",
  "pre-commit==4.5.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["custom_components*"]
namespaces = true

[tool.setuptools.package-data]
"custom_components.omv" = ["*.json", "brand/*.png", "translations/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true